--- a/sass/pagination.scss
+++ b/sass/pagination.scss
@@ -51,7 +51,6 @@
   max-width: 40%;
   padding: 0;
   cursor: pointer;
-  -webkit-appearance: none;
   appearance: none;
 
   @media (max-width: $phone-max-width) {
